--- a/app/src/index.css
+++ b/app/src/index.css
@@ -1,3 +1,7 @@
+@import '@fontsource/roboto/300.css';
+@import '@fontsource/roboto/400.css';
+@import '@fontsource/roboto/500.css';
+@import '@fontsource/roboto/700.css';
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
@@ -8,4 +12,5 @@
 
 body {
   @apply bg-white dark:bg-gray-900 text-gray-900 dark:text-white;
+  font-family: 'Roboto', sans-serif;
 }
